Fixed all known memory leaks and instabilities Separated out Instance and JSFunction implementation in C++ for better readability Updated copyright notices Added test for memory leakage